# ENSTA-EmbSys-Projet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-armadeus.sh  build-raspberry.sh  build.sh  crypt.cpp  dConfig.doxygen
src/: CMakeCache.txt  CMakeLists.txt  CryptoTools.cpp  CryptoTools.h  client.c  config.h  main-client.c  main-server.cpp  main.cpp  server.cpp
src/network/: client.c  server.cpp
src/tests/: client.c  server.c  unitTest_tools.cpp
src/utility/: CryptoTools.cpp  CryptoTools.h  GpioTools.cpp  GpioTools.h  MorseTools.cpp  MorseTools.h  NetworkTools.cpp  NetworkTools.h
toolchains/: armadeus.cmake  pi-toolchain.cmake  raspberry.cmake
